不能清除错误进程缓存

--- a/modules/server/src/main/resources/templates/system/cache.html
+++ b/modules/server/src/main/resources/templates/system/cache.html
@@ -49,7 +49,7 @@
     <blockquote class="layui-elem-quote">错误进程缓存：
         <span th:nodeId="${node?.id}" pidError></span>
         <button type="button" class="layui-btn layui-btn-sm clear" th:nodeId="${node?.id}"
-                t="pidPort">清空
+                t="pidError">清空
         </button>
     </blockquote>
 
