节点分发编辑支持修改分发后的操作

--- a/modules/server/src/main/resources/templates/outgiving/editProject.html
+++ b/modules/server/src/main/resources/templates/outgiving/editProject.html
@@ -98,6 +98,21 @@
                 </div>
             </div>
         </div>
+
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">分发后</label>
+                <div class="layui-input-block">
+                    <select name="afterOpt" id="afterOpt">
+                        <option value="">请选择分发后的操作</option>
+                        <option th:each="sel : ${afterOpt}" th:value="${sel.code}"
+                                th:selected="${sel.code==item?.afterOpt}" th:text="${sel.desc}">
+                        </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
         <div class="layui-collapse" style="display: none;" id="nodeListDiv">
         </div>
         <div class="layui-form-item" style="padding-left: 30%;margin-top: 20px;" id="appendNodeDiv">
