--- a/modules/server/src/main/resources/templates/monitor/loglist.html
+++ b/modules/server/src/main/resources/templates/monitor/loglist.html
@@ -146,7 +146,7 @@
                 var event = obj.event;
                 if ('view' === event) {
                     laytpl(showBox).render(data, function (html) {
-                        layer.open({
+                        layerOpen({
                             type: 1,
                             content: html,
                             scrollbar: false,
