--- a/modules/server/src/main/resources/templates/node/manage/project_recover.html
+++ b/modules/server/src/main/resources/templates/node/manage/project_recover.html
@@ -124,7 +124,7 @@
             success: function (data) {
                 if (200 == data.code) {
                     attrProject(data.data);
-                    layer.open({
+                    layerOpen({
                         type: 1,
                         title: '查看项目',
                         content: $('#div-project'),
