--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -131,7 +131,7 @@
                         clickData = data;
                         var btnDiv = $("#btnDiv");
                         btnDiv.show();
-                        openLayuiIndex = layer.open({
+                        openLayuiIndex = layerOpen({
                             type: 1,
                             shade: [0.3, '#393D49'],
                             title: false,
