--- a/modules/server/src/main/resources/templates/node/ssh/list.html
+++ b/modules/server/src/main/resources/templates/node/ssh/list.html
@@ -88,7 +88,7 @@
 
     // 编辑监控
     function edit(id) {
-        layer.open({
+        layerOpen({
             type: 2,
             title: '编辑ssh',
             content: './edit.html?id=' + id,
@@ -97,7 +97,7 @@
     }
 
     function install(id) {
-        layer.open({
+        layerOpen({
             type: 2,
             title: '安装插件端',
             content: './installAgent.html?id=' + id,
