--- a/modules/server/src/main/resources/templates/outgiving/edit.html
+++ b/modules/server/src/main/resources/templates/outgiving/edit.html
@@ -170,7 +170,7 @@
 
 
         $("#add_selectNode").click(function () {
-            layer.open({
+            layerOpen({
                 type: 1,
                 title: '选择节点',
                 content: $('#selectNode'),
