--- a/modules/server/src/main/resources/templates/outgiving/editProject.html
+++ b/modules/server/src/main/resources/templates/outgiving/editProject.html
@@ -319,7 +319,7 @@
         whitelistDirectorySelect = $("select[name='whitelistDirectory']");
 
         $("#add_selectNode").click(function () {
-            layer.open({
+            layerOpen({
                 type: 1,
                 title: '选择节点',
                 content: $('#selectNode'),
