--- a/modules/server/src/main/resources/templates/user/list.html
+++ b/modules/server/src/main/resources/templates/user/list.html
@@ -100,7 +100,7 @@
             layer.msg("请先创建角色");
             return;
         }
-        layer.open({
+        layerOpen({
             type: 2,
             title: '编辑用户',
             content: './edit?id=' + id,
